# GetCourse-dl

./: .gitignore  README.md  pyproject.toml  run_postponed_dload.py
getcourse_dl/: main.py
getcourse_dl/downloaders/: __init__.py  abstract_downloader.py  dummy_downloader.py  m3u8_playlist_downloader.py  yt_postponed_downloader.py
getcourse_dl/logger/: __init__.py  logger.py
getcourse_dl/network_limiter/: nlim.py
getcourse_dl/network_wrapper/: nwrap.py
getcourse_dl/parsers/: abstract_parser.py  lessons_parser.py  m3u8_playlist_parser.py  trainings_parser.py  yt_parser.py
getcourse_dl/pipelines/: abstract_pypline.py  linear.py
