[tool.pylint]
max-line-length = 120

[tool.poetry]
name = "getcourse-dl"
version = "0.1.0"
description = ""
authors = ["errrorrr503 <egortit-33@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
termcolor = "^2.4.0"
browser-cookie3 = "^0.19.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
mypy = "^1.11.2"
flake8 = "^7.1.1"
types-requests = "^2.32.0.20240914"
types-beautifulsoup4 = "^4.12.0.20240907"
types-termcolor = "^1.1.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
